<resources>
    <string name="app_name">Activity 1A PAM</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="tLogin">Sign</string>
    <string name="tData">Data Anda</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txPassword">Ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="idaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
</resources>